--- a/app/src/main/res/layout/fragment_chosen.xml
+++ b/app/src/main/res/layout/fragment_chosen.xml
@@ -5,15 +5,15 @@
              tools:context="com.douliu.myplayer.ui.fragments.ChosenFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <com.jude.easyrecyclerview.swipe.SwipeRefreshLayout
+    <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <com.jude.easyrecyclerview.EasyRecyclerView
+        <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-        </com.jude.easyrecyclerview.EasyRecyclerView>
-    </com.jude.easyrecyclerview.swipe.SwipeRefreshLayout>
+        </android.support.v7.widget.RecyclerView>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </FrameLayout>
